@@ -1,5 +1,7 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/template/ttp3.C: New test.
+
 	* g++.dg/template/friend2.C: New test.
 	* g++.old-deja/g++/brendan/crash8.C: Adjust location of error.
 
