@@ -1,5 +1,11 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/5213
+	* pt.c (convert_template_argument): Be more careful determining
+	when RECORD_TYPE templates are or are not templates.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	PR c++/775
 	* cp-tree.h (handle_class_head): Adjust prototype.
 	* decl2.c (handle_class_head): Add DEFN_P and NEW_TYPE_P
